--- a/stylesheet.css
+++ b/stylesheet.css
@@ -160,6 +160,8 @@ letter-spacing: 0.1em;
 @media screen and (max-width: 768px) {
 .container{
   height: 400px;
+     justify-content: flex-start;
+  align-items: center; 
 }
   }
 
